--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
----
 title: Autumn Cottage Life
-baseurl: "/"
-permalink: "/:title/"
+baseurl: /
+permalink: '/:title/'
 description: A minimal blogging theme for Stackbit
 palette: yellow
 header:
@@ -10,105 +9,105 @@ header:
   title: Fjord
   tagline: Minimal and clean blog theme
   logo_img: images/logo.png
-  background_img: images/header-bg.jpg
+  background_img: /images/127772807_701905537135127_3819956554134411547_n.jpg
   has_nav: true
   nav_links:
-  - type: action
-    template: action
-    label: Home
-    url: "/"
-    style: link
-    icon_class: ''
-    new_window: false
-  - type: action
-    template: action
-    label: About
-    url: "/about"
-    style: link
-    icon_class: ''
-    new_window: false
-  - type: action
-    template: action
-    label: Style Guide
-    url: "/style-guide"
-    style: link
-    icon_class: ''
-    new_window: false
-  - type: action
-    template: action
-    label: Contact
-    url: "/contact"
-    style: link
-    icon_class: ''
-    new_window: false
+    - type: action
+      template: action
+      label: Home
+      url: /
+      style: link
+      icon_class: ''
+      new_window: false
+    - type: action
+      template: action
+      label: About
+      url: /about
+      style: link
+      icon_class: ''
+      new_window: false
+    - type: action
+      template: action
+      label: Style Guide
+      url: /style-guide
+      style: link
+      icon_class: ''
+      new_window: false
+    - type: action
+      template: action
+      label: Contact
+      url: /contact
+      style: link
+      icon_class: ''
+      new_window: false
   has_social: true
   social_links:
-  - type: action
-    template: action
-    label: Twitter
-    url: https://twitter.com/
-    style: icon
-    icon_class: fa-twitter
-    new_window: true
-  - type: action
-    template: action
-    label: Instagram
-    url: https://www.instagram.com/
-    style: icon
-    icon_class: fa-instagram
-    new_window: true
-  - type: action
-    template: action
-    label: GitHub
-    url: https://github.com/
-    style: icon
-    icon_class: fa-github
-    new_window: true
-  - type: action
-    template: action
-    label: LinkedIn
-    url: https://www.linkedin.com/
-    style: icon
-    icon_class: fa-linkedin
-    new_window: true
-  - type: action
-    template: action
-    label: DEV
-    url: https://dev.to/
-    style: icon
-    icon_class: fa-dev
-    new_window: true
+    - type: action
+      template: action
+      label: Twitter
+      url: 'https://twitter.com/'
+      style: icon
+      icon_class: fa-twitter
+      new_window: true
+    - type: action
+      template: action
+      label: Instagram
+      url: 'https://www.instagram.com/'
+      style: icon
+      icon_class: fa-instagram
+      new_window: true
+    - type: action
+      template: action
+      label: GitHub
+      url: 'https://github.com/'
+      style: icon
+      icon_class: fa-github
+      new_window: true
+    - type: action
+      template: action
+      label: LinkedIn
+      url: 'https://www.linkedin.com/'
+      style: icon
+      icon_class: fa-linkedin
+      new_window: true
+    - type: action
+      template: action
+      label: DEV
+      url: 'https://dev.to/'
+      style: icon
+      icon_class: fa-dev
+      new_window: true
 footer:
   type: footer
   template: footer
-  content: "&copy; All rights reserved."
+  content: '&copy; All rights reserved.'
   links:
-  - type: action
-    template: action
-    label: Made with Stackbit.
-    url: https://www.stackbit.com
-    style: link
-    new_window: true
-    icon_class: ''
+    - type: action
+      template: action
+      label: Made with Stackbit.
+      url: 'https://www.stackbit.com'
+      style: link
+      new_window: true
+      icon_class: ''
 sass:
   indentWidth: 4
   style: nested
   precision: 10
 plugins:
-- jekyll-menus
+  - jekyll-menus
 exclude:
-- Gemfile
-- Gemfile.lock
-- node_modules
-- vendor/bundle/
-- vendor/cache/
-- vendor/gems/
-- vendor/ruby/
-- LICENSE.md
-- README.md
-- netlify.toml
-- stackbit-build.sh
-- stackbit-pull.js
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+  - LICENSE.md
+  - README.md
+  - netlify.toml
+  - stackbit-build.sh
+  - stackbit-pull.js
 collections:
   posts:
-    permalink: "/posts/:title/"
+    permalink: '/posts/:title/'
