_config.yml: updated icon_class in social_links

--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ header:
       label: Pinterest
       url: 'https://github.com/'
       style: icon
-      icon_class: fa-github
+      icon_class: fa-pinterest
       new_window: true
     - type: action
       template: action
