--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ header:
     - type: action
       template: action
       label: Instagram
-      url: 'https://www.instagram.com/'
+      url: 'https://www.instagram.com/autumncottagelife/'
       style: icon
       icon_class: fa-instagram
       new_window: true
